# chipsort-test

./: CMakeLists.txt
ColorPicker/: ColorPicker.ini  ColorPicker.ver  ColorPicker_en.qm  ColorPicker_zh.qm  colorPicker.pro  colorPicker.qrc  colorPickerFact.cpp  colorPickerFact.h  colorPickerMod.cpp  colorPickerMod.h  colorPickerParam.cpp  colorPickerParam.h  colorPickerWdg.cpp  colorPickerWdg.h  colorPickerWdg.ui  colorPicker_en.ts  colorPicker_zh.ts
GRRreport/: GRRreport.ini  GRRreport.qrc  GRRreportFact.cpp  GRRreportFact.h  GRRreportMod.cpp  GRRreportMod.h  GRRreportParam.cpp  GRRreportParam.h  GRRreportWdg.cpp  GRRreportWdg.h  GRRreport_en.qm  GRRreport_en.ts
angleFilter/: angleFilter.ini  angleFilter.pro  angleFilter.qrc  angleFilter.ver  angleFilterFact.cpp  angleFilterFact.h  angleFilterMod.cpp  angleFilterMod.h  angleFilterParam.cpp  angleFilterParam.h  angleFilterWdg.cpp  angleFilterWdg.h  angleFilterWdg.ui  angleFilter_en.qm  angleFilter_en.ts  angleFilter_zh.qm  angleFilter_zh.ts
arithmetic_pre/: arithmetic_pre.ini  arithmetic_pre.pro  arithmetic_pre.qrc  arithmetic_pre.ver  arithmetic_preFactory.cpp  arithmetic_preFactory.h  arithmetic_preModule.cpp  arithmetic_preModule.h  arithmetic_preParam.cpp  arithmetic_preParam.h  arithmetic_preWidget.cpp  arithmetic_preWidget.h  arithmetic_preWidget.ui  arithmetic_pre_en.qm  arithmetic_pre_en.ts  arithmetic_pre_zh.qm  arithmetic_pre_zh.ts
calib3D5S/: calib3D5S.ini  calib3D5S.pro  calib3D5S.qrc  calib3D5S.ver  calib3D5SFact.cpp  calib3D5SFact.h  calib3D5SMod.cpp  calib3D5SMod.h  calib3D5SParam.cpp  calib3D5SParam.h  calib3D5SWdg.cpp  calib3D5SWdg.h  calib3D5SWdg.ui  calib3D5S_en.qm  calib3D5S_en.ts  calib3D5S_zh.qm  calib3D5S_zh.ts
calib3D5S_hom/: calib3D5S_hom.ini  calib3D5S_hom.pro  calib3D5S_hom.qrc  calib3D5S_hom.ver  calib3D5S_homFact.cpp  calib3D5S_homFact.h  calib3D5S_homMod.cpp  calib3D5S_homMod.h  calib3D5S_homParam.cpp  calib3D5S_homParam.h  calib3D5S_homWdg.cpp  calib3D5S_homWdg.h  calib3D5S_homWdg.ui  calib3D5S_hom_en.ts  calib3D5S_hom_zh.ts
calib3D5S_new/: calib3D5S_new.ini  calib3D5S_new.qrc  calib3D5S_newFact.cpp  calib3D5S_newFact.h  calib3D5S_newMod.cpp  calib3D5S_newMod.h  calib3D5S_newParam.cpp  calib3D5S_newParam.h  calib3D5S_newWdg.cpp  calib3D5S_newWdg.h  calib3D5S_newWdg.ui  calib3D5S_new_en.ts  calib3D5S_new_zh.qm  calib3D5S_new_zh.ts
chipClass/: chipClass.qrc  chipClass_en.ts  chipClass_zh.ts  chipMod.cpp  chipMod.h  customView.cpp  customView.h  fitEdge.cpp  fitEdge.h  hom3d5s.cpp  hom3d5s.h  inclu.h  paramTables.cpp  paramTables.h  subDirConfig.cmake
composeND_pre/: composeND_pre.ini  composeND_pre.pro  composeND_pre.qrc  composeND_pre.ver  composeND_preFactory.cpp  composeND_preFactory.h  composeND_preModule.cpp  composeND_preModule.h  composeND_preParam.cpp  composeND_preParam.h  composeND_preWidget.cpp  composeND_preWidget.h  composeND_preWidget.ui  composeND_pre_en.qm  composeND_pre_en.ts  composeND_pre_zh.qm  composeND_pre_zh.ts
ctrlMod/: ctrl.ini  ctrlFact.cpp  ctrlFact.h  ctrlMod.cpp  ctrlMod.h  ctrlMod.ini  ctrlMod.qrc  ctrlWdg.cpp  ctrlWdg.h  ctrlWdg.ui
dimensionMeasure/: dimensionMeasure.ini  dimensionMeasure.pro  dimensionMeasure.qrc  dimensionMeasure.ver  dimensionMeasureFact.cpp  dimensionMeasureFact.h  dimensionMeasureMod.cpp  dimensionMeasureMod.h  dimensionMeasureParam.cpp  dimensionMeasureParam.h  dimensionMeasureWdg.cpp  dimensionMeasureWdg.h  dimensionMeasureWdg.ui
edgeInter/: edgeInter.ini  edgeInter.pro  edgeInter.qrc  edgeInter.ver  edgeInterFact.cpp  edgeInterFact.h  edgeInterMod.cpp  edgeInterMod.h  edgeInterParam.cpp  edgeInterParam.h  edgeInterWdg.cpp  edgeInterWdg.h  edgeInterWdg.ui  edgeInter_en.qm  edgeInter_en.ts  edgeInter_zh.qm  edgeInter_zh.ts
edgeJudge/: edgeJudge.ini  edgeJudge.pro  edgeJudge.qrc  edgeJudge.ver  edgeJudgeFact.cpp  edgeJudgeFact.h  edgeJudgeMod.cpp  edgeJudgeMod.h  edgeJudgeParam.cpp  edgeJudgeParam.h  edgeJudgeWdg.cpp  edgeJudgeWdg.h  edgeJudgeWdg.ui  edgeJudge_en.ts  edgeJudge_zh.qm  edgeJudge_zh.ts
edgeLine/: edgeLine.ini  edgeLine.pro  edgeLine.qrc  edgeLine.ver  edgeLineFact.cpp  edgeLineFact.h  edgeLineMod.cpp  edgeLineMod.h  edgeLineParam.cpp  edgeLineParam.h  edgeLineWdg.cpp  edgeLineWdg.h  edgeLineWdg.ui  edgeLine_en.qm  edgeLine_en.ts  edgeLine_zh.qm  edgeLine_zh.ts
edgeLocation/: AdvanceDialog.ui  edgeLocation.ini  edgeLocation.pro  edgeLocation.qrc  edgeLocation.ver  edgeLocationFact.cpp  edgeLocationFact.h  edgeLocationMod.cpp  edgeLocationMod.h  edgeLocationParam.cpp  edgeLocationParam.h  edgeLocationWdg.cpp  edgeLocationWdg.h  edgeLocationWdg.ui  edgeLocation_en.qm  edgeLocation_en.ts  edgeLocation_zh.qm  edgeLocation_zh.ts
edgeWarp/: edgeWarp.ini  edgeWarp.pro  edgeWarp.qrc  edgeWarp.ver  edgeWarpFact.cpp  edgeWarpFact.h  edgeWarpMod.cpp  edgeWarpMod.h  edgeWarpParam.cpp  edgeWarpParam.h  edgeWarpWdg.cpp  edgeWarpWdg.h  edgeWarpWdg.ui
halOperator/: halOperator.cpp  halOperator.h  halOperator.qrc  halOperator.ver
imageSegment_pre/: imageSegment_pre.ini  imageSegment_pre.pro  imageSegment_pre.qrc  imageSegment_preFact.cpp  imageSegment_preFact.h  imageSegment_preMod.cpp  imageSegment_preMod.h  imageSegment_preParam.cpp  imageSegment_preParam.h  imageSegment_preWdg.cpp  imageSegment_preWdg.h  imageSegment_preWdg.ui  imageSegment_pre_en.qm  imageSegment_pre_en.ts  imageSegment_pre_zh.qm  imageSegment_pre_zh.ts
location/: location.ini  location.pro  location.qrc  locationFact.cpp  locationFact.h  locationMod.cpp  locationMod.h  locationParam.cpp  locationParam.h  locationWdg.cpp  (+5 more)
spiltImage_pre/: CMakeLists.txt  spiltImage_pre.ini  spiltImage_pre.pro  spiltImage_pre.qrc  spiltImage_pre.ver  spiltImage_preFact.cpp  spiltImage_preFact.h  spiltImage_preMod.cpp  spiltImage_preMod.h  spiltImage_preParam.cpp  spiltImage_preParam.h  spiltImage_preWdg.cpp  spiltImage_preWdg.h  spiltImage_preWdg.ui  spiltImage_pre_en.qm  spiltImage_pre_en.ts  spiltImage_pre_zh.qm  spiltImage_pre_zh.ts
(+349 files in other folders)
